package Behavioral_Patterm.Iterator.test1;

public interface Collection63 {
    public Iterator63 createIterator();
}
