package Behavioral_Patterm.Iterator.test1;

public interface  Iterator63 {
    Object first();

    Object next();

    Object current();
    boolean isDone();

}

